# eksiseyler_api

./: .env.example  Dockerfile  README.md  crontab  fly.toml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml  etl.yml
api/: main.py
app/: main.py
eksiseyler_api/: main.py  models.py
etl/: crontab  etl.py  run_daily_etl.py  scraper.py  test_scraper.py
