[tool.poetry]
name = "eksiseyler-api"
version = "0.1.0"
description = ""
authors = ["frknltrk <unluturkfurkan@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
